--- a/popup.html
+++ b/popup.html
@@ -68,7 +68,7 @@
         <span class="slider"></span>
       </label>
     </div>
-
+    <p>Khi bật extension có thể gây lệch lạc bố cục trang web, vui lòng tắt extension khi không cần thiết</p>
     <div class="content">
       <div id="settings-panel">
         <h3>Cài đặt Viền</h3>
