--- a/popup.html
+++ b/popup.html
@@ -82,11 +82,11 @@
         </div>
         <div class="row">
           <label for="highlightBgColor">Màu nền highlight</label>
-          <input id="highlightBgColor" type="color" value="#ef4444" />
+          <input id="highlightBgColor" type="color" value="#08537d" />
         </div>
         <div class="row">
           <label for="highlightBgOpacity">Độ mờ nền</label>
-          <input id="highlightBgOpacity" type="range" min="0" max="1" step="0.05" value="0.2" />
+          <input id="highlightBgOpacity" type="range" min="0" max="1" step="0.05" value="0.7" />
         </div>
 
         <h3>Cài đặt Badge</h3>
@@ -96,7 +96,7 @@
         </div>
         <div class="row">
           <label for="badgeBgColor">Màu nền</label>
-          <input id="badgeBgColor" type="color" value="#ffc107" />
+          <input id="badgeBgColor" type="color" value="#fd12f5" />
         </div>
         <div class="row">
           <label for="badgeBgOpacity">Độ mờ nền</label>
@@ -104,7 +104,7 @@
         </div>
         <div class="row">
           <label for="badgeColor">Màu chữ</label>
-          <input id="badgeColor" type="color" value="#d32f2f" />
+          <input id="badgeColor" type="color" value="#ffffff" />
         </div>
         <div class="row">
           <label for="fontSize">Cỡ chữ (px)</label>
